--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 extreme weather events, and threats to ecosystems and biodiversity. It is a critical issue that
                 requires collective action to mitigate its effects.
             </p>
-            <a href="/cimatechange1.html" class="btn btn-primary">Learn More</a>
+            <a href="cimatechange1.html" class="btn btn-primary">Learn More</a>
         </div>
     </div>
 </section>
