--- a/preventive.html
+++ b/preventive.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="main.html">Home</a>
+            <a class="navbar-brand" href="index.html">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,6 +82,7 @@
         <p>
             By implementing these measures, you can contribute to a more sustainable and eco-friendly future.
         </p>
+        <a href="cf.html" class="btn btn-primary">Calculate your carbon footprint</a>
     </section>
 
     <!-- Footer Section -->
